# tahaif

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  start.sh
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_auth_users.py  0002_catalog.py  0004_cart_orders.py  0005_notifications_loyalty_reviews.py  0006_idempotency_newsletter.py
apps/api/app/: main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: admin.py  auth.py  cart.py  catalog.py  health.py  loyalty.py  marketing.py  me.py  orders.py  reviews.py  vendor.py
apps/api/app/core/: config.py  db.py  deps.py  rate_limit.py  redis_client.py  security.py
apps/api/app/integrations/: google_oauth.py  meilisearch_client.py  resend_client.py  s3_client.py  twilio_client.py
apps/api/app/models/: __init__.py  address.py  base.py  catalog.py  loyalty.py  order.py  user.py
apps/api/app/repositories/: address_repository.py  cart_repository.py  catalog_repository.py  loyalty_repository.py  order_repository.py  user_repository.py
apps/api/app/schemas/: address.py  auth.py  cart.py  catalog.py  loyalty.py  order.py  user.py  vendor.py
apps/api/app/services/: auth_service.py  cart_service.py  catalog_service.py  checkout_service.py  delivery_service.py  fx_service.py  loyalty_service.py  marketing_service.py  review_service.py  vendor_service.py
apps/api/app/workers/: fx_rate_worker.py  notification_tasks.py  outbox_worker.py
apps/api/scripts/: seed.py
apps/api/tests/: conftest.py  test_auth.py  test_auth_service.py  test_cart.py  test_catalog.py  test_catalog_service.py  test_checkout.py  test_health.py  test_loyalty.py  test_marketing.py  test_reviews.py  test_vendor.py
docs/: runbook.md
infra/: Dockerfile.api  Dockerfile.web  docker-compose.yml  fly.toml  load-test.js
(+68 files in other folders)
