[project]
name = "tahaif-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi[standard]>=0.110",
    "uvicorn[standard]>=0.30",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    # Validation / settings
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Auth
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    # Cache
    "redis[hiredis]>=5.0",
    # HTTP
    "httpx>=0.27",
    # Task queue
    "arq>=0.26",
    # Storage
    "boto3>=1.34",
    # Payments
    "stripe>=9.0",
    # Logging / observability
    "structlog>=24.1",
    "sentry-sdk[fastapi]>=2.0",
    # Email
    "resend>=2.0",
    # Search
    "meilisearch-python-sdk>=3.0",
    "slowapi>=0.1.9",
    "google-auth>=2.54.0",
    "google-auth-oauthlib>=1.4.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "anyio>=4.0",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.11",
    "factory-boy>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG001"]   # pytest fixtures must be in signature even when unused
"alembic/**" = ["ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
